feat: CRUD Notification, Kafka setup

--- a/NotificationService/src/main/resources/application.yml
+++ b/NotificationService/src/main/resources/application.yml
@@ -41,9 +41,9 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8070/eureka}
 
-#kafka:
-#  kafka-host-url: ${KAFKA_HOST_URL:localhost:9192}
-#  schema-registry-host-url: ${SCHEMA_REGISTRY_HOST_URL:http://localhost:9191}
+kafka:
+  kafka-host-url: ${KAFKA_HOST_URL:localhost:9192}
+  schema-registry-host-url: ${SCHEMA_REGISTRY_HOST_URL:http://localhost:9191}
 
 # OpenAPI/Swagger Configuration
 springdoc:
