--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     <groupId>rmit.saintgiong</groupId>
     <artifactId>JM-Notification</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>NotificationApi</module>
+        <module>NotificationService</module>
+    </modules>
     <name>JM-NotificationService</name>
     <description>JM-NotificationService</description>
     <url/>
