--- a/NotificationService/src/main/resources/application.yml
+++ b/NotificationService/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: ${SERVER_PORT:8188}
 
 spring:
   application:
-    name: notification-service
+    name: jm-notification-service
+  config:
+    import: optional:file:../.env[.properties],optional:file:.env[.properties]
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/notification_db}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
@@ -16,6 +18,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      password: ${REDIS_PASSWORD:}
+      port: ${REDIS_PORT:6479}
+      timeout: 2000ms
 
 management:
   endpoints:
@@ -44,6 +52,16 @@ eureka:
 kafka:
   kafka-host-url: ${KAFKA_HOST_URL:localhost:9192}
   schema-registry-host-url: ${SCHEMA_REGISTRY_HOST_URL:http://localhost:9191}
+
+key:
+  public-key-b64: ${PUBLIC_KEY_B64:}
+  private-key-b64: ${PRIVATE_KEY_B64:}
+
+jwe:
+  issuer: ${JWE_ISSUER:JM_BACKEND}
+  temp-token-ttl-seconds: ${JWE_TEMP_TOKEN_TTL:300}
+  access-token-ttl-seconds: ${JWE_ACCESS_TOKEN_TTL:900}
+  refresh-token-ttl-seconds: ${JWE_REFRESH_TOKEN_TTL:604800}
 
 # OpenAPI/Swagger Configuration
 springdoc:
