--- a/NotificationService/src/main/resources/application.yml
+++ b/NotificationService/src/main/resources/application.yml
@@ -24,6 +24,20 @@ spring:
       password: ${REDIS_PASSWORD:}
       port: ${REDIS_PORT:6479}
       timeout: 2000ms
+  kafka:
+    bootstrap-servers:
+      - ${KAFKA_HOST_URL:localhost:9192}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+    consumer:
+      group-id: ${spring.application.name}
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+    properties:
+      schema.registry.url: ${SCHEMA_REGISTRY_HOST_URL:http://localhost:9191}
+      specific.avro.reader: true
 
 management:
   endpoints:
